# CreativeGate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  SMOKETEST.md  pyproject.toml  railway.json
.claude/: agent.md  context.md  launch.json  memory.md  rules.md
configs/: default_profile.yaml
docs/creative-gate-system-design/: README.md
docs/creative-gate-system-design/project/: .thumbnail
docs/creative-gate-system-design/project/design_handoff_creativegate/: CreativeGate.dc.html  README.md
examples/: bootstrap_calibration.py  ground-truth-example.json
src/creativegate/: __init__.py  api.py  cli.py  envfile.py  features.py  profiles.py  schemas.py
src/creativegate/calibration/: __init__.py  harness.py  synthetic_world.py
src/creativegate/engine/: __init__.py  funnel.py  fusion.py  recommend.py
src/creativegate/providers/: __init__.py  embeddings.py  llm.py
src/creativegate/report/: __init__.py  dashboard.html  html.py
src/creativegate/rungs/: __init__.py  base.py  deterministic.py  judge.py  predictor.py
src/creativegate/storage/: __init__.py  repo.py
tests/: conftest.py  test_calibration.py  test_funnel.py  test_hardening.py  test_providers.py  test_safety_rails.py  test_synthetic_world.py
