[project]
name = "creativegate"
version = "0.1.0"
description = "A simulation-first evaluation funnel for digital creative artifacts: evaluate before you spend."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "typer>=0.12",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
creativegate = "creativegate.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/creativegate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
